fix: update letter and line spacing

--- a/css/main.css
+++ b/css/main.css
@@ -159,3 +159,9 @@ footer {
     background-color: rgba(54, 52, 52, 0.85);
     transition: 0.3s;
 }
+
+.welcome_section p {
+    font-size: 28px;
+    line-height: 1.6;
+    letter-spacing: 1px;
+}
